# zpresenter

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.cursor/skills/python-uv-environment/: SKILL.md
.cursor/skills/zpresenter-authoring/: SKILL.md
docs/: AUDIT.md  PRESENTATION_EVOLUTION.md  RESEARCH.md  WEBAPP.md
examples/: dummy-board-strategy.json  dummy-platform-architecture.json  dummy-team-workshop.json  gamma-minimal.deck.json  sample.deck.json
examples/samples/: sample-apex-strategy-2026.json  sample-clinical-clear302.json  sample-design-system-nova.json  sample-global-economy-outlook.json  sample-meridian-platform-2026.json  sample-nova-launch-2026.json  sample-product-launch-orbit.json
schemas/: deck.schema.json
scripts/: generate_20slide_samples.py  generate_sample_decks.py
src/zpresenter/: __init__.py  ai_generate.py  ai_improve.py  audience.py  builder.py  cli.py  layout_solver.py  layouts_pptx.py  media.py  models.py  server.py  slide_design.py  slide_image_layout.py  template_inspect.py
src/zpresenter/iconography/: __init__.py  catalog.py
tests/: test_ai_generate.py  test_audience.py  test_builder.py  test_iconography.py  test_layout_solver.py  test_models.py  test_schema.py  test_template_inspect.py
webapp/: index.html  package-lock.json  package.json  tailwind.config.ts
webapp/src/: App.tsx  api.ts  index.css  theme.ts  types.ts
webapp/src/components/: AIPanel.tsx  DeckGeneratePanel.tsx  Header.tsx  OverviewModal.tsx  Sidebar.tsx  SlideCard.tsx  SlideViewer.tsx
(+6 files in other folders)
